make relationship between text and corresponding figures clearer

--- a/manuscripts/child-documents/results.Rmd
+++ b/manuscripts/child-documents/results.Rmd
@@ -44,7 +44,7 @@ Figure \@ref(fig:phase-similarity-plots-delta)A shows the connectivity profiles 
 
 Figure \@ref(fig:phase-similarity-plots-delta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the delta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-delta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-delta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the delta band was largely undifferentiated between individuals across contexts, with only a slight, negligible influence of individual-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-delta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using the Hilbert transform method, but with slightly more uncertainty in the estimates (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-delta)). The maximal model of functional connectome similarity did not converge when the phase lag index was estimated using the multitaper method. 
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-delta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using the Hilbert transform method (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-delta)), but with slightly more uncertainty in the estimates. The maximal model of functional connectome similarity did not converge when the phase lag index was estimated using the multitaper method. 
 
 ```{r phase-similarity-plots-delta}
 #| fig.cap: "Results of phase coupling analyses in the delta band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -65,7 +65,7 @@ Figure \@ref(fig:phase-similarity-plots-theta)A shows the connectivity profiles 
 
 Figure \@ref(fig:phase-similarity-plots-theta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the theta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-theta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were at most small. Table \@ref(tab:phase-similarity-table-theta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the theta band was largely undifferentiated between individuals across contexts, with only a slight influence of individual-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-theta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally of similar magnitudes, with the exception of the within sessions and between states contrast which was visibly smaller. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method and the Hilbert transform method, but with slightly more uncertainty in the estimates (Figures \@ref(fig:phase-similarity-plots-maximal-theta) and \@ref(fig:phase-similarity-plots-hilbert-maximal-theta)).
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-theta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally of similar magnitudes, with the exception of the within sessions and between states contrast which was visibly smaller. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure \@ref(fig:phase-similarity-plots-maximal-theta)) and the Hilbert transform method (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-theta)), but with slightly more uncertainty in the estimates.
 
 ```{r phase-similarity-plots-theta}
 #| fig.cap: "Results of phase coupling analyses in the theta band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -88,7 +88,7 @@ Figure \@ref(fig:phase-similarity-plots-alpha)B shows the functional connectome 
 
 However, despite the presence of more visually apparent individual effects, there was still a strong group effect. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-alpha)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were still at most small. Table \@ref(tab:phase-similarity-table-alpha) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with small modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the alpha band was differentiated between individuals across contexts, but with only a small influence of individual-dependent factors over and above the influence of stable group-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-alpha)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; and (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; however, differences in functional connectome similarity were generally of similar magnitudes. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method and the Hilbert transform method, but with slightly more uncertainty in the estimates (Figures \@ref(fig:phase-similarity-plots-maximal-alpha) and \@ref(fig:phase-similarity-plots-hilbert-maximal-alpha)).
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-alpha)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; and (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; however, differences in functional connectome similarity were generally of similar magnitudes. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure \@ref(fig:phase-similarity-plots-maximal-alpha)) and the Hilbert transform method (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-alpha)), but with slightly more uncertainty in the estimates.
 
 ```{r phase-similarity-plots-alpha}
 #| fig.cap: "Results of phase coupling analyses in the alpha band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -109,7 +109,7 @@ Figure \@ref(fig:phase-similarity-plots-beta)A shows the connectivity profiles f
 
 Figure \@ref(fig:phase-similarity-plots-beta)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the beta band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-beta)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, were at most small. Table \@ref(tab:phase-similarity-table-beta) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the beta band was largely undifferentiated between individuals across contexts, with only a slight influence of individual-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-beta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method and the Hilbert transform method, but with slightly more uncertainty in the estimates (Figures \@ref(fig:phase-similarity-plots-maximal-beta) and \@ref(fig:phase-similarity-plots-hilbert-maximal-beta)).
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-beta)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure \@ref(fig:phase-similarity-plots-maximal-beta)) and the Hilbert transform method (Figure \@ref(fig:phase-similarity-plots-hilbert-maximal-beta)), but with slightly more uncertainty in the estimates.
 
 ```{r phase-similarity-plots-beta}
 #| fig.cap: "Results of phase coupling analyses in the beta band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -130,7 +130,7 @@ Figure \@ref(fig:phase-similarity-plots-gamma)A shows the connectivity profiles 
 
 Figure \@ref(fig:phase-similarity-plots-gamma)B shows the functional connectome similarity estimates between all pairs of phase coupling functional connectomes in the gamma band. There was a visually obvious group effect, with high similarity between functional connectomes regardless of participant, session, or state. This was supported by the group-level contrast results in Figure \@ref(fig:phase-similarity-plots-gamma)C, which showed that although functional connectomes were more similar within participants than between participants at all levels of the session and state predictors, on average, the effect sizes most compatible with our data, given the background model, ranged from practically nil to at most small. Table \@ref(tab:phase-similarity-table-gamma) shows the estimated marginal means and targeted hypothesis tests of zero difference within and between participants corresponding to each of these contrasts. Note that the between-participant functional connectome similarity means were stable across contexts, whereas the within-participant means were more variable, indicating that the (at most small) positive differences in functional connectome similarity can be attributed to individual-dependent factors with slight modulations by session and state. Jointly, these results suggest that, on average, the phase coupling dynamics of underlying global network activity in the gamma band was largely undifferentiated between individuals across contexts, with only a slight, negligible influence of individual-dependent factors.
 
-These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-gamma)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method and the Hilbert transform method, but with slightly more uncertainty in the estimates (Figures \@ref(fig:phase-similarity-plots-maximal-gamma) and \@ref(fig:phase-similarity-plots-hilbert-maximal-gamma)). This increased uncertainty resulted in the direction of the between sessions, between sessions and within states, and between sessions and states contrasts to become unresolved; however, the difference in meaning between a precise zero effect [@anderson_AssessingStatisticalResults_2019] for the maximal models and a very small positive effect for the reduced models observed here is trivial, and does not detract from the main point that the results of both models suggest that the phase coupling dynamics of underlying global network activity in the gamma band was undifferentiated between individuals across contexts, with only a slight, negligible influence of individual-dependent factors.
+These results remained largely consistent when the phase lag index was estimated using the Hilbert transform method instead of the the multitaper method (Figure \@ref(fig:phase-similarity-plots-hilbert-gamma)), with some minor differences: (1) phase coupling was generally weaker, but individual patterns of coupling were similar or the same; (2) functional connectome similarity was generally higher, but patterns of similarity were similar or the same; and (3) differences in functional connectome similarity were generally smaller, but were still positive with a similar pattern of variation across contexts. Likewise, the contrast results remained largely consistent between the reduced and maximal mixed beta regression models of functional connectome similarity when the phase lag index was estimated using both the multitaper method (Figure \@ref(fig:phase-similarity-plots-maximal-gamma)) and the Hilbert transform method (Figures \@ref(fig:phase-similarity-plots-hilbert-maximal-gamma)), but with slightly more uncertainty in the estimates. This increased uncertainty resulted in the direction of the between sessions, between sessions and within states, and between sessions and states contrasts to become unresolved; however, the difference in meaning between a precise zero effect [@anderson_AssessingStatisticalResults_2019] for the maximal models and a very small positive effect for the reduced models observed here is trivial, and does not detract from the main point that the results of both models suggest that the phase coupling dynamics of underlying global network activity in the gamma band was undifferentiated between individuals across contexts, with only a slight, negligible influence of individual-dependent factors.
 
 ```{r phase-similarity-plots-gamma}
 #| fig.cap: "Results of phase coupling analyses in the gamma band: (A) connectivity profiles for all functional connectomes, organized by participant and recording; (B) estimates of functional connectome similarity between all pairs of functional connectomes, organized by participant and recording; and (C) group-level contrasts estimating the average difference in functional connectome similarity within and between participants across contexts."
@@ -170,7 +170,7 @@ targets::tar_read(amplitude_similarity_contrasts_table_nhst_alpha)
 
 ### Delta, Theta, Beta, and Gamma
 
-Although we conducted all analyses for the delta, theta, beta, and gamma bands, we refrain from interpreting the results of these analyses here based on a post-hoc suggestion from a committee member; however, for transparency, the results for these frequency bands can be found in Figure \@ref(fig:amplitude-similarity-delta-theta-beta-gamma) in Appendix A. In short, the rationale behind this decision was that the functional connectome similarity analyses for these frequency bands appeared misleading, due to an unforeseen limitation of our approach to quantifying functional connectome similarity. Specifically---although the distribution of amplitude envelope correlation estimates in each of these frequency bands was in agreement with previous published published work [e.g., @fraschinietal_RobustnessFunctionalConnectivity_2019; @laietal_ComparisonScalpSourcereconstructed_2018; @mehrkanoonetal_IntrinsicCouplingModes_2014]---any qualitatively distinct differences in spatial organization between any pair of functional connectomes was overshadowed by the fact that the relative position of the observations in each connectome were very close together in space, resulting in very high to near-perfect estimates of functional connectome similarity across participants, sessions, and states. While these estimates are a statistically valid reflection of the data, we felt that they were neurophysiologically unrealistic, greatly exaggerating the magnitude of similarity between any pair of functional connectomes and failing to capture the intended nuance across participants, sessions, and states.
+Although we conducted all analyses for the delta, theta, beta, and gamma bands, we refrain from interpreting the results of these analyses here based on a post-hoc suggestion from a committee member; however, for transparency, the results for these frequency bands are shown in Figure \@ref(fig:amplitude-similarity-delta-theta-beta-gamma) in Appendix A. In short, the rationale behind this decision was that the functional connectome similarity analyses for these frequency bands appeared misleading, due to an unforeseen limitation of our approach to quantifying functional connectome similarity. Specifically---although the distribution of amplitude envelope correlation estimates in each of these frequency bands was in agreement with previous published published work [e.g., @fraschinietal_RobustnessFunctionalConnectivity_2019; @laietal_ComparisonScalpSourcereconstructed_2018; @mehrkanoonetal_IntrinsicCouplingModes_2014]---any qualitatively distinct differences in spatial organization between any pair of functional connectomes was overshadowed by the fact that the relative position of the observations in each connectome were very close together in space, resulting in very high to near-perfect estimates of functional connectome similarity across participants, sessions, and states. While these estimates are a statistically valid reflection of the data, we felt that they were neurophysiologically unrealistic, greatly exaggerating the magnitude of similarity between any pair of functional connectomes and failing to capture the intended nuance across participants, sessions, and states.
 
 ## Outcome variability of functional connectome similarity contrasts
 
