add a note about the gordon study's similarity matrix

--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -267,7 +267,7 @@ knitr::include_graphics(here::here("figures/outcome-plot.png"))
 
 Based on the findings of previous fMRI network variant research [e.g., @grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019], we expected to find patterns of results consistent with the fourth plot in Figure \@ref(fig:outcome-plot) across all frequency bands for both phase coupling and amplitude coupling functional connectomes---consistent with functional connectomes that were more similar within than between individuals across all contrasts, with greater variations in similarity related to state than session. However, we emphasize that any of the result patterns depicted in Figure \@ref(fig:outcome-plot) would provide supportive evidence of stable individual differences in EEG functional connectomes, albeit with somewhat different interpretations as we described above for the individual, individual-session, and individual-state effects. Thus, our primary scientific hypothesis was that if the phase coupling and/or amplitude coupling dynamics of underlying global network activity in a given frequency band was influenced by stable individual-dependent factors *in our sample*, then functional connectomes would be more similar within than between individuals across all contrasts, on average, with smaller variations in similarity related to session or state.
 
-We had no expectations regarding the possible range of effect sizes we could find, but again note that relatively higher values correspond to greater within-individual functional connectome stability and between-individual differentiation across contexts; whereas relatively lower values correspond to lesser within-individual functional connectome stability and between-individual differentiation. Thus, we reiterate the importance of considering the range of effect sizes most compatible with our data (given our background model) when drawing conclusions about our primary scientific hypothesis, rather than merely drawing conclusions based on the direction of these effects and whether or not they included zero [@amrheinetal_InferentialStatisticsDescriptive_2019]. Additionally, to contextualize our results against the relevant fMRI literature, we considered the results of @grattonetal_FunctionalBrainNetworks_2018 as a cautious point of reference, keeping in mind that finding equivalent effect sizes would be surprising, given the differences in measurement, design, and analysis between our studies, on top of random variation in the data between our samples. In their study, @grattonetal_FunctionalBrainNetworks_2018 investigated how functional connectome similarity---measured using the Pearson correlation coefficient between the vectorized lower triangles of each functional connectome pair---differed within and between individuals across ten separate fMRI sessions and five different states (eyes-open resting state, and visual coherence, semantic, memory, and motor tasks). They found that functional connectomes were more similar within participants than between participants across contexts, on average, at both the group- and individual-level by approximately 0.2 points ($\mathrm{Mean_{within}} = 0.556$, $\mathrm{Mean_{between}} = 0.357$) on the response scale when functional connectivity was estimated at the recording level, and by approximately 0.3 points ($\mathrm{Mean_{within}} = 0.795$, $\mathrm{Mean_{between}} = 0.512$) on the response scale when functional connectivity was estimated using the split-half method (see, respectively, Figures S2 and 3 in @grattonetal_FunctionalBrainNetworks_2018).[^5] <!-- Note: At the individual-level (Supplemental Figure 2A, middle plot), there is little outcome variability across participants, and differences between the group and individual effects are approximately 0.3 more similar for every participant. -->
+We had no expectations regarding the possible range of effect sizes we could find, but again note that relatively higher values correspond to greater within-individual functional connectome stability and between-individual differentiation across contexts; whereas relatively lower values correspond to lesser within-individual functional connectome stability and between-individual differentiation. Thus, we reiterate the importance of considering the range of effect sizes most compatible with our data (given our background model) when drawing conclusions about our primary scientific hypothesis, rather than merely drawing conclusions based on the direction of these effects and whether or not they included zero [@amrheinetal_InferentialStatisticsDescriptive_2019]. Additionally, to contextualize our results against the relevant fMRI literature, we considered the results of @grattonetal_FunctionalBrainNetworks_2018 as a cautious point of reference, keeping in mind that finding equivalent effect sizes would be surprising, given the differences in measurement, design, and analysis between our studies, on top of random variation in the data between our samples. In their study, @grattonetal_FunctionalBrainNetworks_2018 investigated how functional connectome similarity---measured using the Pearson correlation coefficient between the vectorized lower triangles of each functional connectome pair---differed within and between individuals across ten separate fMRI sessions and five different states (eyes-open resting state, and visual coherence, semantic, memory, and motor tasks). They found that functional connectomes were more similar within participants than between participants across contexts, on average, at both the group-level and individual-level by approximately 0.2 points ($\mathrm{Mean_{within}} = 0.556$, $\mathrm{Mean_{between}} = 0.357$) on the response scale when functional connectivity was estimated at the recording level, and by approximately 0.3 points ($\mathrm{Mean_{within}} = 0.795$, $\mathrm{Mean_{between}} = 0.512$) on the response scale when functional connectivity was estimated using the split-half method (see, respectively, Figures S2 and 3 in @grattonetal_FunctionalBrainNetworks_2018).[^5] A similarity matrix for the eyes-open resting state functional connectomes from this sample was also reported by this group of researchers in a separate study, which showed individual differences in functional connectome similarity of a similar magnitude across sessions to those discussed above (see Figure 2H in @gordonetal_PrecisionFunctionalMapping_2017).
 
 Finally, given our focus on individual differences, we considered it naturally important to investigate outcome variability of these effects across participants; particularly because network variants have been characterized as a common phenomenon present in all individuals, rather than an idiosyncrasy of just a few individuals [@seitzmanetal_TraitlikeVariantsHuman_2019]. This served as a compliment to the group-level analysis of individual differences described above, allowing us to evaluate whether the group-level outcomes we observed would hold at the level of individuals (i.e., the level of observation where these differences originated from) in terms of the direction of these effects. Indeed, a central aim of investigating outcome variability was to dispel any misconceptions about the implications of our findings that could be caused by focusing only on the group-level outcomes---which can lead even highly trained experts to overestimate the importance and generalizability of findings due to uncertainty about average effects often being quite precise even in the presence of substantial outcome variability [@zhangetal_IllusionPredictabilityScientific_2022].
 
